--- a/NLayer.Web/appsettings.json
+++ b/NLayer.Web/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "SqlConnection": "Data Source=C3L1L;Initial Catalog=NLayerBaseAppDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
+  "BaseUrl": "https://localhost:7236/api/",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
